[package]
name = "rs_granite"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", features = [] }
iyes_loopless = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
bevy_asset_loader = { version = "0.12", features = ["stageless", "2d"] }
rand = "0.8"
rand_chacha = "0.3"
regex = "1"
pathfinding = "3.0"
